--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </div>
 </section>
-<div id="predictionDiv"></div>
+<div id="predictionDiv" style="font-size: 2rem; color: black; background-color: white; padding: 1rem; position: absolute; top: 10px; left: 10px; z-index: 1000;"></div>
 </body>
 
 </html>
