--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 <section>
-    <h1>Title</h1>
+    <h1>Interface</h1>
     <button id="webcamButton">Start Webcam</button>
     <div class="videoView">
         <div style="position: relative;">
@@ -21,7 +21,7 @@
             <div id="myimage"></div>
         </div>
     </div>
-    <div id="predictionDiv" style="font-size: 2rem; color: black; background-color: white; padding: 1rem; position: absolute; top: 600px; left: 20px; z-index: 1000;"></div>
+    <div id="predictionDiv" style="font-size: 2rem; color: black; background-color: white; padding: 1rem; position: absolute; top: 585px; left: 15px; z-index: 1000;"></div>
 </section>
 </body>
 </html>
